/*************************************************************************************
 * Copyright (C) 2012-2018 E.R.P. Consultores y Asociados, C.A.                      *
 * Contributor(s): Yamel Senih ysenih@erpya.com                                      *
 * This program is free software: you can redistribute it and/or modify              *
 * it under the terms of the GNU General Public License as published by              *
 * the Free Software Foundation, either version 2 of the License, or                 *
 * (at your option) any later version.                                               *
 * This program is distributed in the hope that it will be useful,                   *
 * but WITHOUT ANY WARRANTY; without even the implied warranty of                    *
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                     *
 * GNU General Public License for more details.                                      *
 * You should have received a copy of the GNU General Public License                 *
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.            *
 ************************************************************************************/
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.spin.grpc.util";
option java_outer_classname = "ADempiereAccess";
option objc_class_prefix = "HLW";

package access;

// The greeting service definition.
service Security {
  // Request user roles
  rpc GetUserInfo(LoginRequest) returns (UserInfoValue) {}
  // Request login from user
  rpc RunLogin(LoginRequest) returns (Session) {}
  // Request login and role
  rpc RunLoginDefault(LoginRequest) returns (Session) {}
  // Request a Role from uuid
  rpc RunLogout(LogoutRequest) returns (Session) {}
  // Request user roles from Session
  rpc GetUserInfoFromSession(UserInfoRequest) returns (UserInfoValue) {}
  // Request Menu from Parent UUID
  rpc GetMenuAndChild(UserInfoRequest) returns (Menu) {}
  // Request change role
  rpc RunChangeRole(UserInfoRequest) returns (Session) {}
  // Request session
  rpc GetSession(SessionRequest) returns (Session) {}
}

// Request a Login Session
message LoginRequest {
	string userName = 2;
	string userPass = 3;
	string roleUuid = 4;
	string organizationUuid = 5;
	string warehouseUuid = 6;
	string clientVersion = 7;
	string language = 8;
}

// Request a Logout
message LogoutRequest {
	string sessionUuid = 1;
	string language = 2;
	string clientVersion = 3;
}

// Request a Session
message SessionRequest {
	string sessionUuid = 1;
	string clientVersion = 2;
}

// Request a Change Role
message ChangeRoleRequest {
	string sessionUuid = 1;
	string roleUuid = 2;
	string organizationUuid = 3;
	string warehouseUuid = 4;
	string language = 5;
	string clientVersion = 6;
}

// Request User Info
message UserInfoRequest {
	string sessionUuid = 1;
	string roleUuid = 2;
	string organizationUuid = 3;
	string warehouseUuid = 4;
	string language = 5;
	string clientVersion = 6;
}

// Role list from user
message UserInfoValue {
	UserInfo userInfo = 1;
	repeated Role roles = 2;
}

// User information
message UserInfo {
	int32 id = 1;
	string uuid = 2;
	string name = 3;
	string description = 4;
	string comments = 5;
}


// Session
message Session {
	int32 id = 1;
	string uuid = 2;
	string name = 3;
	UserInfo userInfo = 4;
	Role role = 5;
	bool processed = 6;
	map<string, ContextValue> defaultContext = 7;
}

// Define value for object
message ContextValue {
	int32 intValue = 1;
	int64 longValue = 2;
	double doubleValue = 3;
	bool booleanValue = 4;
	string stringValue = 5;
	enum ValueType {
		NULL = 0;
		INTEGER = 1;
		LONG = 2;
		DOUBLE = 3;
		BOOLEAN = 4;
		STRING = 5;
		DATE = 6;
	}
	ValueType valueType = 6;
}

// Role Definition
message Role {
	int32 id = 1;
	string uuid = 2;
	string name = 3;
	string description = 4;
	int32 clientId = 5;
	string clientName = 6;
	bool isCanReport = 7;
	bool isCanExport = 8;
	bool isPersonalLock = 9;
	bool isPersonalAccess = 10;
	// Entity Access
	repeated Access organizations = 11;
	repeated Access windows = 12;
	repeated Access process = 13;
	repeated Access forms = 14;
	repeated Access browsers = 15;
	repeated Access workflows = 16;
	repeated Access tasks = 17;
	repeated Access dashboards = 18;
	repeated Access documentActions = 19;
	repeated TableAccess tables = 20;
	repeated ColumnAccess columns = 21;
	repeated RecordAccess records = 22;
}

// Access for distinct entity
message Access {
	string uuid = 1;
	bool isReadOnly = 2;
	// Optional for Document Action Access
	string action = 3;
}

// Access for Table
message TableAccess {
	string tableName = 1;
	bool isExclude = 2;
	bool isCanReport = 3;
	bool isCanExport = 4;
	enum AccessTypeRule {
		ACCESSING = 0;
		EXPORTING = 1;
		REPORTING = 2;
	}
	AccessTypeRule accessTypeRules = 5;
}

// Access for Column
message ColumnAccess {
	string tableName = 1;
	string columnName = 2;
	bool isExclude = 3;
	bool isReadOnly = 4;
}

// Access for Record
message RecordAccess {
	string tableName = 1;
	int32 recordId = 2;
	string recordUuid = 3;
	bool isExclude = 4;
	bool isReadOnly = 5;
	bool isDependentEntities = 6;
}

// Menu
message Menu {
	int32 id = 1;
	string uuid = 2;
	string parentUuid = 4;
	string name = 5;
	string description = 6;
	string sequence = 7;
	bool isReadOnly = 8;
	bool isSummary = 9;
	bool isSOTrx = 10;
	string action = 11;
	// Supported References
	string referenceUuid = 12;
	repeated Menu childs = 13;
	bool isActive = 14;
}
